t/resource/lib/Test/UsedModules/Fail/1.pm
package Test::UsedModules::Fail::1;
use strict;
use warnings;
use utf8;

# meta: whitelist: Cwd
use Cwd;

1;
